# flake8-import-order-jwodder

./: CHANGELOG.md  README.rst  flake8_import_order_jwodder.py  requirements.txt  setup.cfg  setup.py  tox.ini
src/: flake8_import_order_jwodder.py
test/: test_jwodder_style.py
test/data/: stdlib_shadowing.py  wrong_from_import_order.py  wrong_import_order.py  wrong_relative_order.py  wrong_section_jwodder.py
