[metadata]
name = flake8-import-order-jwodder
version = attr:flake8_import_order_jwodder.__version__
description = Yet another import order style
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = flake8-import-order-jwodder@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/flake8-import-order-jwodder

keywords =
    code style
    flake8
    import
    import order
    linter

classifiers =
    Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Framework :: Flake8
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance

project_urls =
    Source Code = https://github.com/jwodder/flake8-import-order-jwodder
    Bug Tracker = https://github.com/jwodder/flake8-import-order-jwodder/issues

[options]
py_modules = flake8_import_order_jwodder
package_dir =
    =src
python_requires = ~=3.6
install_requires =
    flake8-import-order ~= 0.18

[options.entry_points]
flake8_import_order.styles =
    jwodder = flake8_import_order_jwodder:JWodder
